--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,13 @@ path = "src/lib.rs"
 name = "policy_engine_cli"
 path = "src/main.rs"
 
+[[bin]]
+name = "schema_generator"
+path = "src/schema_generator.rs"
+
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
+schemars = "1.0.4"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_derive = "1.0.228"
 serde_json = "1.0.145"
